--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "next": "^9.3.2",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.13.1",
