--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.5",
     "@types/node-fetch": "^2.5.5",
     "@types/node-sass": "^4.11.0",
